# CoBOS

./: .gitignore  README.md  experiments.py  experiments_config.json  main.py  main_plot.py  pyproject.toml  requirements.txt
control/: agent_and_task_states.py  agent_states.py  agents.py  control_logic.py  jobs.py
exp_scripts/: run_base_scheduling_exps.py
inputs/: __init__.py  case_generator.py  config.py  data_generator.py
methods/: __init__.py  max_duration.py  nooverlap_method.py  overlap_method.py  random_task_allocation.py  scheduling_split_tasks.py  solver.py  solver_wrapper.py
scheduling/: __init__.py  scheduling_split_tasks.py
simulation/: sim.py
src/control/: agent_and_task_states.py  agents.py  control_logic.py  jobs.py  representation.py
src/exp_scripts/: __init__.py  run_base_scheduling_exps.py
src/inputs/: case_generator.py  config.py  data_generator.py
src/methods/: __init__.py  dynamic_task_allocation.py  max_duration.py  nooverlap_method.py  overlap_method.py  random_task_allocation.py  scheduling_split_tasks.py  solver.py  solver_wrapper.py
src/simulation/: __init__.py  sim.py
src/utils/: file_handler.py
src/visualization/: graphs.py  (+6 more)
tests/: test_control_logic.py  test_enum.py  test_error_case.py  test_job_gen.py  test_plotting_histogram.py  test_pydantic.py  test_random_generation.py  test_random_task_gen.py  test_removing_constraints.py  test_run_exp.py  test_solver_logging.py  test_solver_seeding.py
utils/: file_handler.py
visualization/: graphs.py  histogram_plotting.ipynb  plot_experiments_result.py  web_visualization.py
(+4 files in other folders)
