[project]
name = "scheduling"
version = "0.1.0"
description = "Online scheduling for stochastic cooperative jobs"
authors = [
    {name = "Jan Behrens", email = "jan.kristof.behrens@cvut.cz"},
    {name = "Marina Ionova", email = "marina.ionova@cvut.cz"},
]
dependencies = [
    "numpy>=1.24.1",
    "ortools>=9.5.2237",
    "networkx>=3.0",
    "matplotlib>=3.6.2",
    "pandas>=1.5.3",
    "streamlit>=1.26.0",
    "altair>=4.2.2",
    "graphviz",
    "pytest",
    "pydantic<2",
    "tqdm",
    "scipy",
    "hypothesis",
    "dask[complete]"
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.4.3",
    "coverage>=7.3.2",
    "hypothesis>=6.98.1",
]
lint = [
    "black>=23.10.1",
    "ruff>=0.1.3",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.scripts]
test = "pytest -v tests/"
coverage = "coverage run --source src -m pytest tests/"
post_coverage = "coverage xml"
ruff = "ruff check src tests examples"
black = "black --check --diff --verbose src tests"
format = "black src tests examples"
lint = { composite = ["ruff", "black"] }
